--- a/css.less
+++ b/css.less
@@ -1,22 +1,22 @@
 body {
   font-family: "Open Sans";
-  font-size: 12px;
 }
 
 .rounded() {
   border-radius: 2px;
 }
 
-#options, #display {
+#options {
+  margin-left: 20px;
+  width: 25%;
   float: left;
 }
 
-#options {
-  width: 25%;
-}
-
 #display {
+  margin-right: 20px;
   width: 65%;
+  float: right;
+  font-family: 'Inconsolata';
 
   * {
     padding: 0;
@@ -51,13 +51,26 @@ body {
   }
 }
 
-.tag {  
-  .rounded();
-  border: 1px solid transparent;
-  padding: 4px;
-  margin: 4px;
+#display {
+  &.something-selected {
+    .tag {
+      opacity: 0.4;
+    }
+  }
 
-  &.highlighted {
-    border: 1px solid green;
+  .tag {  
+    border-left: 4px solid transparent;
+    margin-left: -4px;
+
+    &.highlighted {
+      opacity: 1.0;
+      border-color: #ccc;
+      &.close {
+        background-color: #efefef;
+      }
+      &.open {
+        background-color: #dfdfdf;
+      }
+    }
   }
 }
